[FIX] mass_mailing: fix template compressed mode
Purpose
=======
Fix the theme templates which are displayed in compressed mode
on large screen sizes.

Specification
=============
Following the extension of the chatter's width, the iframe width became
too small to be considered as a large viewport meaning all the bootstrap
lg rules aren't correctly applied.

Making sure the iframe width is large enough by making its position absolute
so that it takes the full form width.
Preventing the website snippets from overlapping the template by adding a
padding right to the layout.

Choosing the iframe to be position absolute instead of the website snippets
to make sure the snippets drag to scroll feature still works.

related commits:
916ac17
cf6cd5e

Task-4086474

--- a/addons/mass_mailing/static/src/scss/mass_mailing.scss
+++ b/addons/mass_mailing/static/src/scss/mass_mailing.scss
@@ -25,6 +25,17 @@
     border: none;
 }
 
+body.editor_has_snippets .o_field_mass_mailing_html div.d-flex:has(iframe) {
+    // Forcing the iframe to have the correct display mode (mobile vs desktop) by making it
+    // take all the available horizontal space so that the theme lg rules are correctly applied.
+    position: relative;
+    justify-content: end;
+    iframe {
+        position: absolute !important;
+        height: 100%;
+    }
+}
+
 .o_form_view.o_mass_mailing_mailing_form .o_form_renderer {
     &.o_form_readonly .o_mass_mailing_subject {
         // Place the favorite button without breaking the emoji widget
